feat: Add H2 in-memory database support for easy testing without MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,22 @@
 server.port=8080
 spring.application.name=College Security Register
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/college_security?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# H2 Database Configuration (In-Memory - No MySQL Required!)
+spring.datasource.url=jdbc:h2:mem:college_security
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console (Access at: http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=5MB
