--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- H2 Database (In-Memory Alternative) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
